Comment out line in .gitattributes

--- a/info/.gitattributes
+++ b/info/.gitattributes
@@ -2,4 +2,4 @@
 */kathryn/bulk_data/q2_3_input/** linguist-vendored
 src/kathryn/bulk_data/q2_3_input/** linguist-vectored
 
-*.html linguist-language=R
+# *.html linguist-language=R
