successfully create ld matrix for one gene locus

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 kathryn/bulk_data/finemapping/plink_1_gene/plink_results/ld5_successful/acbd6_ld5.ld
+kathryn/bulk_data/finemapping/ldlink_1_gene/plink/plink_results/ld5_successful/acbd6_ld5.ld
